--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,21 +1,22 @@
 <h1>ツイート一覧</h1>
 <% @tweets.each do |e| %>
-    <% if session[:login_uid] %>
     <%= e.message %>
     <%=link_to '[削除]', tweet_path(e), data: { turbo_method: :delete } %>
-    <%= link_to 'いいね', likes_path(tweet_id: e.id), data: { turbo_method: :post } %>
-    <%= link_to 'いいね削除', like_path(e), data: { turbo_method: :delete } %><br>
+    <% if session[:login_uid] %>
+        <%= link_to 'いいね', likes_path(tweet_id: e.id), data: { turbo_method: :post } %>
+        <%= link_to 'いいね削除', like_path(e), data: { turbo_method: :delete } %>
     <% end %>
+    <br>
 <% end %>
 
 <hr>
 
-<%= form_for @tweet, url: {action: :create} do |f| %>
-    <%= f.label :message, 'メッセージ' %>
-    <%= f.text_field :message %>
-    <%= f.submit 'ツイート' %>
-<% end %>
 <% if session[:login_uid] %>
+    <%= form_for @tweet, url: {action: :create} do |f| %>
+        <%= f.label :message, 'メッセージ' %>
+        <%= f.text_field :message %>
+        <%= f.submit 'ツイート' %>
+    <% end %>
     <%= link_to "[ログアウト]", top_logout_path %>
 <% else %>
     <%= link_to "[ログイン]", top_main_path %>
