--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -3,8 +3,11 @@
     <%= e.message %>
     <%=link_to '[削除]', tweet_path(e), data: { turbo_method: :delete } %>
     <% if session[:login_uid] %>
-        <%= link_to 'いいね', likes_path(tweet_id: e.id), data: { turbo_method: :post } %>
-        <%= link_to 'いいね削除', like_path(e), data: { turbo_method: :delete } %>
+        <% if e.liked?(current_user) %>
+            <%= link_to '[いいね削除]', like_path(e), data: { turbo_method: :delete } %>
+        <% else %>
+            <%= link_to '[いいね]', likes_path(tweet_id: e.id), data: { turbo_method: :post } %>
+        <% end %>
     <% end %>
     <br>
 <% end %>
